Implement post new user data to server.

--- a/onboarding.html
+++ b/onboarding.html
@@ -119,7 +119,7 @@ https://templatemo.com/tm-535-softy-pinko
     </header>
     <!-- ***** Header Area End ***** -->
 
-    <main>
+    <form>
       <!-- ***** sign up section ***** -->
       <div class="container onboarding">
         <div class="row">
@@ -175,9 +175,7 @@ https://templatemo.com/tm-535-softy-pinko
               </div>
 
               <div class="form-group text-center">
-                <button type="submit" class="main-button button-sign-up">
-                  Sign Up
-                </button>
+                <button class="main-button button-sign-up">Sign Up</button>
               </div>
             </div>
             <p class="text-center">
@@ -189,7 +187,10 @@ https://templatemo.com/tm-535-softy-pinko
 
       <div class="form-group">
         <div class="onboarding-question onboarding-question-1 hidden">
-          <label for="cars">How would you describe your current mental state and emotional well-being?</label>
+          <label for="cars"
+            >How would you describe your current mental state and emotional
+            well-being?</label
+          >
 
           <br />
 
@@ -213,7 +214,10 @@ https://templatemo.com/tm-535-softy-pinko
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-2 hidden">
-          <label for="cars">Have you ever received any form of psychological or counseling services in the past?</label>
+          <label for="cars"
+            >Have you ever received any form of psychological or counseling
+            services in the past?</label
+          >
 
           <br />
 
@@ -236,7 +240,10 @@ https://templatemo.com/tm-535-softy-pinko
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-3 hidden">
-          <label for="cars">Are you currently taking any medications or receiving treatment for a mental health condition?</label>
+          <label for="cars"
+            >Are you currently taking any medications or receiving treatment for
+            a mental health condition?</label
+          >
 
           <br />
 
@@ -260,7 +267,10 @@ https://templatemo.com/tm-535-softy-pinko
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-4 hidden">
-          <label for="cars">Do you have any specific goals or expectations for this onboarding process? What would you like to achieve through our services?</label>
+          <label for="cars"
+            >Do you have any specific goals or expectations for this onboarding
+            process? What would you like to achieve through our services?</label
+          >
 
           <br />
 
@@ -283,10 +293,13 @@ https://templatemo.com/tm-535-softy-pinko
           </div>
         </div>
       </div>
-      
+
       <div class="form-group">
         <div class="onboarding-question onboarding-question-5 hidden">
-          <label for="cars">Are there any particular challenges or issues you would like to address during your sessions with our psychologists?</label>
+          <label for="cars"
+            >Are there any particular challenges or issues you would like to
+            address during your sessions with our psychologists?</label
+          >
 
           <br />
 
@@ -313,7 +326,10 @@ https://templatemo.com/tm-535-softy-pinko
 
       <div class="form-group">
         <div class="onboarding-question onboarding-question-6 hidden">
-          <label for="cars">Have you experienced any major life events or significant changes recently that may have impacted your mental health?</label>
+          <label for="cars"
+            >Have you experienced any major life events or significant changes
+            recently that may have impacted your mental health?</label
+          >
 
           <br />
 
@@ -335,7 +351,10 @@ https://templatemo.com/tm-535-softy-pinko
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-7 hidden">
-          <label for="cars">Do you have any preferences regarding the gender or background of the psychologist you will be working with?</label>
+          <label for="cars"
+            >Do you have any preferences regarding the gender or background of
+            the psychologist you will be working with?</label
+          >
 
           <br />
 
@@ -358,18 +377,22 @@ https://templatemo.com/tm-535-softy-pinko
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-8 hidden">
-          <label for="cars">How did you hear about our psychology services and what made you decide to seek assistance at this time?</label>
+          <label for="cars"
+            >How did you hear about our psychology services and what made you
+            decide to seek assistance at this time?</label
+          >
 
           <br />
 
           <select name="cars" id="cars" class="form-control">
             <br />
             <option value="volvo">Online search</option>
-            <option value="saab">Referral from a healthcare professional</option>
+            <option value="saab">
+              Referral from a healthcare professional
+            </option>
             <option value="mercedes">Word of mouth</option>
             <option value="mercedes">Personal research</option>
             <option value="mercedes">Social Network</option>
-
           </select>
 
           <div class="form-group text-center">
@@ -384,7 +407,10 @@ https://templatemo.com/tm-535-softy-pinko
       </div>
       <div class="form-group">
         <div class="onboarding-question onboarding-question-9 hidden">
-          <label for="cars">Is there any additional information or specific concerns you would like to share with us before starting the onboarding process?</label>
+          <label for="cars"
+            >Is there any additional information or specific concerns you would
+            like to share with us before starting the onboarding process?</label
+          >
 
           <br />
 
@@ -392,7 +418,14 @@ https://templatemo.com/tm-535-softy-pinko
             <br />
             <option value="volvo">Yes</option>
             <option value="volvo">No</option>
-            <textarea class="form-control" id="message-9" placeholder="No, I would like also the teraphist know..." name="message" rows="4" cols="40"></textarea>
+            <textarea
+              class="form-control"
+              id="message-9"
+              placeholder="No, I would like also the teraphist know..."
+              name="message"
+              rows="4"
+              cols="40"
+            ></textarea>
           </select>
 
           <div class="form-group text-center">
@@ -408,7 +441,11 @@ https://templatemo.com/tm-535-softy-pinko
 
       <div class="form-group">
         <div class="onboarding-question onboarding-question-10 hidden">
-          <label for="cars">Are you comfortable with sharing personal and sensitive information related to your mental health during the onboarding and counseling sessions?</label>
+          <label for="cars"
+            >Are you comfortable with sharing personal and sensitive information
+            related to your mental health during the onboarding and counseling
+            sessions?</label
+          >
 
           <br />
 
@@ -416,7 +453,14 @@ https://templatemo.com/tm-535-softy-pinko
             <br />
             <option value="volvo">Yes</option>
             <option value="saab">No</option>
-            <textarea class="form-control" id="message-10" placeholder="No, beacuse..." name="message" rows="4" cols="40"></textarea>
+            <textarea
+              class="form-control"
+              id="message-10"
+              placeholder="No, beacuse..."
+              name="message"
+              rows="4"
+              cols="40"
+            ></textarea>
           </select>
 
           <div class="form-group text-center">
@@ -424,12 +468,12 @@ https://templatemo.com/tm-535-softy-pinko
               type="submit"
               class="main-button button-onboarding button-onboarding-10"
             >
-              Next
+              Finish
             </button>
           </div>
         </div>
       </div>
-    </main>
+    </form>
 
     <!-- JavaScript -->
     <script src="assets/js/jquery-2.1.0.min.js"></script>
