Add deatils homepage

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ https://templatemo.com/tm-535-softy-pinko
                 We provide the best <strong>support</strong><br />to help your
                 <strong>life</strong>
               </h1>
-              <p>yolo</p>
+              <p>Empowering Your Transformation Towards a Happier and Healthier Self</p>
               <a href="#features" class="main-button-slider">Discover More</a>
             </div>
           </div>
