--- a/onboarding.html
+++ b/onboarding.html
@@ -100,13 +100,13 @@ https://templatemo.com/tm-535-softy-pinko
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
-                <li><a href="#welcome" class="active">Home</a></li>
-                <li><a href="#features">About</a></li>
-                <li><a href="#work-process">Onboarding Process</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#pricing-plans">Pricing Tables</a></li>
-                <li><a href="#blog">Blog Entries</a></li>
-                <li><a href="#contact-us">Contact Us</a></li>
+                <li><a href="/#welcome" class="active">Home</a></li>
+                <li><a href="/#features">About</a></li>
+                <li><a href="/#work-process">Onboarding Process</a></li>
+                <li><a href="/#testimonials">Testimonials</a></li>
+                <li><a href="/#pricing-plans">Pricing Tables</a></li>
+                <li><a href="/#blog">Blog Entries</a></li>
+                <li><a href="/#contact-us">Contact Us</a></li>
               </ul>
               <a class="menu-trigger">
                 <span>Menu</span>
