--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ https://templatemo.com/tm-535-softy-pinko
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css" />
 
     <link rel="stylesheet" href="assets/css/templatemo-softy-pinko.css" />
+
+    <link rel="stylesheet" href="assets/css/custom.css" />
   </head>
 
   <body>
@@ -95,6 +97,7 @@ https://templatemo.com/tm-535-softy-pinko
                   height="50"
                   alt="Softy Pinko"
                 />
+                Mentally
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
@@ -131,7 +134,10 @@ https://templatemo.com/tm-535-softy-pinko
                 We provide the best <strong>support</strong><br />to help your
                 <strong>life</strong>
               </h1>
-              <p>Empowering Your Transformation Towards a Happier and Healthier Self</p>
+              <p>
+                Empowering Your Transformation Towards a Happier and Healthier
+                Self
+              </p>
               <a href="#features" class="main-button-slider">Discover More</a>
             </div>
           </div>
@@ -160,7 +166,12 @@ https://templatemo.com/tm-535-softy-pinko
                   </div>
                   <h5 class="features-title">Modern Approach</h5>
                   <p>
-                    Our therapy center offers a collaborative and personalized approach. By building strong therapeutic relationships, we understand your unique experiences and goals. Using evidence-based techniques, we address issues like anxiety, depression, stress management, self-esteem, and relationships.
+                    Our therapy center offers a collaborative and personalized
+                    approach. By building strong therapeutic relationships, we
+                    understand your unique experiences and goals. Using
+                    evidence-based techniques, we address issues like anxiety,
+                    depression, stress management, self-esteem, and
+                    relationships.
                   </p>
                 </div>
               </div>
@@ -179,7 +190,11 @@ https://templatemo.com/tm-535-softy-pinko
                   </div>
                   <h5 class="features-title">Optimised technology</h5>
                   <p>
-                    We recognize the importance of technology in your daily life. Therefore, we offer convenient online therapy sessions, allowing you to engage in therapy from the comfort of your own home or any private space. Our online platform is secure, confidential, and easy to use.
+                    We recognize the importance of technology in your daily
+                    life. Therefore, we offer convenient online therapy
+                    sessions, allowing you to engage in therapy from the comfort
+                    of your own home or any private space. Our online platform
+                    is secure, confidential, and easy to use.
                   </p>
                 </div>
               </div>
@@ -197,7 +212,14 @@ https://templatemo.com/tm-535-softy-pinko
                     /></i>
                   </div>
                   <h5 class="features-title">Ultimate Results</h5>
-                  <p>As a young adult, your well-being is our top priority. We're committed to helping you navigate the challenges and transitions of this phase in your life, empowering you to build resilience, find fulfillment, and create a meaningful future. Take the first step towards positive change by contacting us today to schedule a consultation.</p>
+                  <p>
+                    As a young adult, your well-being is our top priority. We're
+                    committed to helping you navigate the challenges and
+                    transitions of this phase in your life, empowering you to
+                    build resilience, find fulfillment, and create a meaningful
+                    future. Take the first step towards positive change by
+                    contacting us today to schedule a consultation.
+                  </p>
                 </div>
               </div>
               <!-- ***** Features Small Item End ***** -->
@@ -231,7 +253,12 @@ https://templatemo.com/tm-535-softy-pinko
             </div>
             <div class="left-text">
               <p>
-                We understand that navigating life as a young adult can be challenging. Whether you're dealing with academic pressure, career choices, relationship struggles, or mental health concerns, we're here to provide the support you need. Our therapy services are specifically tailored to address the unique needs and experiences of young adults like you.
+                We understand that navigating life as a young adult can be
+                challenging. Whether you're dealing with academic pressure,
+                career choices, relationship struggles, or mental health
+                concerns, we're here to provide the support you need. Our
+                therapy services are specifically tailored to address the unique
+                needs and experiences of young adults like you.
               </p>
             </div>
           </div>
@@ -257,7 +284,9 @@ https://templatemo.com/tm-535-softy-pinko
             </div>
             <div class="left-text">
               <p>
-                Remember, you don't have to face life's challenges alone. We're here to support you every step of the way on your journey to emotional well-being and personal growth.
+                Remember, you don't have to face life's challenges alone. We're
+                here to support you every step of the way on your journey to
+                emotional well-being and personal growth.
               </p>
             </div>
           </div>
@@ -286,7 +315,10 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="info">
                 <h1>Onboarding Process</h1>
                 <p>
-                    Through personalized consultations and evidence-based therapy sessions, our streamlined process establishes a supportive environment that empowers you to effectively work towards and achieve your goals in a collaborative and impactful manner.
+                  Through personalized consultations and evidence-based therapy
+                  sessions, our streamlined process establishes a supportive
+                  environment that empowers you to effectively work towards and
+                  achieve your goals in a collaborative and impactful manner.
                 </p>
               </div>
             </div>
@@ -295,14 +327,14 @@ https://templatemo.com/tm-535-softy-pinko
           <!-- ***** Mini Box Start ***** -->
           <div class="row">
             <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                <a href="#" class="mini-box">
-                  <i
-                    ><img src="assets/images/work-process-item-01.png" alt=""
-                  /></i>
-                  <strong>Sign up</strong>
-                  <span>Begin by creating an account.</span>
-                </a>
-              </div>
+              <a href="#" class="mini-box">
+                <i
+                  ><img src="assets/images/work-process-item-01.png" alt=""
+                /></i>
+                <strong>Sign up</strong>
+                <span>Begin by creating an account.</span>
+              </a>
+            </div>
             <div class="col-lg-2 col-md-3 col-sm-6 col-6">
               <a href="#" class="mini-box">
                 <i
@@ -312,8 +344,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <span>Share your information and needs.</span>
               </a>
             </div>
-            
-           
+
             <div class="col-lg-2 col-md-3 col-sm-6 col-6">
               <a href="#" class="mini-box">
                 <i
@@ -324,32 +355,32 @@ https://templatemo.com/tm-535-softy-pinko
               </a>
             </div>
             <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                <a href="#" class="mini-box">
-                  <i
-                    ><img src="assets/images/work-process-item-01.png" alt=""
-                  /></i>
-                  <strong>Consultation</strong>
-                  <span>Discuss your responses with a therapist.</span>
-                </a>
-              </div>
-              <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                <a href="#" class="mini-box">
-                  <i
-                    ><img src="assets/images/work-process-item-01.png" alt=""
-                  /></i>
-                  <strong>Session</strong>
-                  <span>Engage in personalized therapy.</span>
-                </a>
-              </div>
-              <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                <a href="#" class="mini-box">
-                  <i
-                    ><img src="assets/images/work-process-item-01.png" alt=""
-                  /></i>
-                  <strong>Progress</strong>
-                  <span>Monitor and evaluate your growth.</span>
-                </a>
-              </div>
+              <a href="#" class="mini-box">
+                <i
+                  ><img src="assets/images/work-process-item-01.png" alt=""
+                /></i>
+                <strong>Consultation</strong>
+                <span>Discuss your responses with a therapist.</span>
+              </a>
+            </div>
+            <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+              <a href="#" class="mini-box">
+                <i
+                  ><img src="assets/images/work-process-item-01.png" alt=""
+                /></i>
+                <strong>Session</strong>
+                <span>Engage in personalized therapy.</span>
+              </a>
+            </div>
+            <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+              <a href="#" class="mini-box">
+                <i
+                  ><img src="assets/images/work-process-item-01.png" alt=""
+                /></i>
+                <strong>Progress</strong>
+                <span>Monitor and evaluate your growth.</span>
+              </a>
+            </div>
           </div>
           <!-- ***** Mini Box End ***** -->
         </div>
@@ -375,7 +406,7 @@ https://templatemo.com/tm-535-softy-pinko
           <div class="offset-lg-3 col-lg-6">
             <div class="center-text">
               <p>
-                Our clients are our biggest supporters.<br>
+                Our clients are our biggest supporters.<br />
                 Here is what they say about us
               </p>
             </div>
@@ -390,7 +421,12 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="team-content">
                 <i><img src="assets/images/testimonial-icon.png" alt="" /></i>
                 <p>
-                    "The therapy sessions were incredibly beneficial, offering valuable guidance and support. The therapist's attentiveness and insights helped me gain new perspectives and insights into myself. I highly recommend this professional therapy service for anyone seeking positive change."</p>
+                  "The therapy sessions were incredibly beneficial, offering
+                  valuable guidance and support. The therapist's attentiveness
+                  and insights helped me gain new perspectives and insights into
+                  myself. I highly recommend this professional therapy service
+                  for anyone seeking positive change."
+                </p>
                 <div class="user-image">
                   <img src="http://placehold.it/60x60" alt="" />
                 </div>
@@ -409,7 +445,13 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="team-content">
                 <i><img src="assets/images/testimonial-icon.png" alt="" /></i>
                 <p>
-                    "The onboarding process was thorough and personalized, addressing all my concerns. The questionnaire allowed me to express myself openly, and the therapist's support made me feel heard and understood. I appreciate the progress made so far and look forward to continuing this transformative journey."</p>
+                  "The onboarding process was thorough and personalized,
+                  addressing all my concerns. The questionnaire allowed me to
+                  express myself openly, and the therapist's support made me
+                  feel heard and understood. I appreciate the progress made so
+                  far and look forward to continuing this transformative
+                  journey."
+                </p>
                 <div class="user-image">
                   <img src="http://placehold.it/60x60" alt="" />
                 </div>
@@ -428,7 +470,12 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="team-content">
                 <i><img src="assets/images/testimonial-icon.png" alt="" /></i>
                 <p>
-                    "Finding a perfect match with my therapist has been a transformative blessing. Their empathy and understanding create a safe space for exploration, fostering deep self-awareness, growth, and healing. I highly recommend this service for life-changing guidance and unwavering support."</p>
+                  "Finding a perfect match with my therapist has been a
+                  transformative blessing. Their empathy and understanding
+                  create a safe space for exploration, fostering deep
+                  self-awareness, growth, and healing. I highly recommend this
+                  service for life-changing guidance and unwavering support."
+                </p>
                 <div class="user-image">
                   <img src="http://placehold.it/60x60" alt="" />
                 </div>
@@ -694,7 +741,9 @@ https://templatemo.com/tm-535-softy-pinko
           <div class="offset-lg-3 col-lg-6">
             <div class="center-text">
               <p>
-                Welcome to our Talk to Us page. We are here to listen and engage with you.  </p>
+                Welcome to our Talk to Us page. We are here to listen and engage
+                with you.
+              </p>
             </div>
           </div>
         </div>
@@ -705,7 +754,16 @@ https://templatemo.com/tm-535-softy-pinko
           <div class="col-lg-4 col-md-6 col-sm-12">
             <h5 class="margin-bottom-30">Keep in touch</h5>
             <div class="contact-text">
-              <p>Whether you have questions, feedback, or inquiries, we encourage you to reach out to us using the form below. </p><p> Our dedicated team is ready to respond promptly and assist you. </p> <p>We appreciate your communication and eagerly await the opportunity to connect with you.
+              <p>
+                Whether you have questions, feedback, or inquiries, we encourage
+                you to reach out to us using the form below.
+              </p>
+              <p>
+                Our dedicated team is ready to respond promptly and assist you.
+              </p>
+              <p>
+                We appreciate your communication and eagerly await the
+                opportunity to connect with you.
               </p>
             </div>
           </div>
