fixing style and description home page

--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
     />
 
     <title>Mentally</title>
-    <!--
-SOFTY PINKO
-https://templatemo.com/tm-535-softy-pinko
--->
+
 
     <!-- Additional CSS Files -->
     <link
@@ -67,7 +64,7 @@ https://templatemo.com/tm-535-softy-pinko
 
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css" />
 
-    <link rel="stylesheet" href="assets/css/templatemo-softy-pinko.css" />
+    <link rel="stylesheet" href="assets/css/template.css" />
 
     <link rel="stylesheet" href="assets/css/custom.css" />
   </head>
@@ -95,7 +92,7 @@ https://templatemo.com/tm-535-softy-pinko
                   src="assets/images/mentally-logo.png"
                   width="50"
                   height="50"
-                  alt="Softy Pinko"
+                  alt="Mentally Logo"
                 />
                 Mentally
               </a>
@@ -107,7 +104,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <li><a href="#work-process">Onboarding Process</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#pricing-plans">Pricing Tables</a></li>
-                <li><a href="#blog">Blog Entries</a></li>
+                <li><a href="#blog">Training Platform</a></li>
                 <li><a href="#contact-us">Contact Us</a></li>
               </ul>
               <a class="menu-trigger">
@@ -166,7 +163,7 @@ https://templatemo.com/tm-535-softy-pinko
                   </div>
                   <h5 class="features-title">Modern Approach</h5>
                   <p>
-                    Our therapy center offers a collaborative and personalized
+                    Our counselling center offers a collaborative and personalized
                     approach. By building strong therapeutic relationships, we
                     understand your unique experiences and goals. Using
                     evidence-based techniques, we address issues like anxiety,
@@ -191,8 +188,8 @@ https://templatemo.com/tm-535-softy-pinko
                   <h5 class="features-title">Optimised technology</h5>
                   <p>
                     We recognize the importance of technology in your daily
-                    life. Therefore, we offer convenient online therapy
-                    sessions, allowing you to engage in therapy from the comfort
+                    life. Therefore, we offer convenient online healing
+                    sessions, allowing you to engage in couunse from the comfort
                     of your own home or any private space. Our online platform
                     is secure, confidential, and easy to use.
                   </p>
@@ -257,7 +254,7 @@ https://templatemo.com/tm-535-softy-pinko
                 challenging. Whether you're dealing with academic pressure,
                 career choices, relationship struggles, or mental health
                 concerns, we're here to provide the support you need. Our
-                therapy services are specifically tailored to address the unique
+                treatment services are specifically tailored to address the unique
                 needs and experiences of young adults like you.
               </p>
             </div>
@@ -315,7 +312,7 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="info">
                 <h1>Onboarding Process</h1>
                 <p>
-                  Through personalized consultations and evidence-based therapy
+                  Through personalized consultations and evidence-based counselling
                   sessions, our streamlined process establishes a supportive
                   environment that empowers you to effectively work towards and
                   achieve your goals in a collaborative and impactful manner.
@@ -369,7 +366,7 @@ https://templatemo.com/tm-535-softy-pinko
                   ><img src="assets/images/work-process-item-01.png" alt=""
                 /></i>
                 <strong>Session</strong>
-                <span>Engage in personalized therapy.</span>
+                <span>Engage in personalized consultations.</span>
               </a>
             </div>
             <div class="col-lg-2 col-md-3 col-sm-6 col-6">
@@ -421,10 +418,10 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="team-content">
                 <i><img src="assets/images/testimonial-icon.png" alt="" /></i>
                 <p>
-                  "The therapy sessions were incredibly beneficial, offering
+                  "The counselling sessions were incredibly beneficial, offering
                   valuable guidance and support. The therapist's attentiveness
                   and insights helped me gain new perspectives and insights into
-                  myself. I highly recommend this professional therapy service
+                  myself. I highly recommend this professional counselling service
                   for anyone seeking positive change."
                 </p>
                 <div class="user-image">
@@ -505,8 +502,7 @@ https://templatemo.com/tm-535-softy-pinko
           <div class="offset-lg-3 col-lg-6">
             <div class="center-text">
               <p>
-                Donec vulputate urna sed rutrum venenatis. Cras consequat magna
-                quis arcu elementum, quis congue risus volutpat.
+                Explore our affordable pricing options for therapy training. Choose from flexible membership plans that fit your budget. Start your transformative journey at a cost that works for you. Invest in yourself and unlock your potential today.
               </p>
             </div>
           </div>
@@ -526,14 +522,14 @@ https://templatemo.com/tm-535-softy-pinko
               <div class="pricing-body">
                 <div class="price-wrapper">
                   <span class="currency">$</span>
-                  <span class="price">14.50</span>
+                  <span class="price">0</span>
                   <span class="period">monthly</span>
                 </div>
                 <ul class="list">
-                  <li class="active">60 GB space</li>
-                  <li class="active">600 GB transfer</li>
-                  <li class="active">Pro Design Panel</li>
-                  <li>15-minute support</li>
+                  <li class="active">30 minutes trial</li>
+                  <li class="active">Live chat</li>
+                  <li class="active">Limited Training platform</li>
+                  <li>60-minute support</li>
                   <li>Unlimited Emails</li>
                   <li>24/7 Security</li>
                 </ul>
@@ -561,10 +557,10 @@ https://templatemo.com/tm-535-softy-pinko
                   <span class="period">monthly</span>
                 </div>
                 <ul class="list">
-                  <li class="active">120 GB space</li>
-                  <li class="active">1200 GB transfer</li>
-                  <li class="active">Pro Design Panel</li>
-                  <li class="active">15-minute support</li>
+                  <li class="active">60 minutes trial session</li>
+                  <li class="active">Live chat</li>
+                  <li class="active">Limited Training platform</li>
+                  <li class="active">60-minute support</li>
                   <li>Unlimited Emails</li>
                   <li>24/7 Security</li>
                 </ul>
@@ -592,10 +588,10 @@ https://templatemo.com/tm-535-softy-pinko
                   <span class="period">monthly</span>
                 </div>
                 <ul class="list">
-                  <li class="active">250 GB space</li>
-                  <li class="active">5000 GB transfer</li>
-                  <li class="active">Pro Design Panel</li>
-                  <li class="active">15-minute support</li>
+                  <li class="active">Unlimited Bookings</li>
+                  <li class="active">Live chat</li>
+                  <li class="active">Limited Training platform</li>
+                  <li class="active">120-minute support</li>
                   <li class="active">Unlimited Emails</li>
                   <li class="active">24/7 Security</li>
                 </ul>
@@ -653,15 +649,13 @@ https://templatemo.com/tm-535-softy-pinko
         <div class="row">
           <div class="col-lg-12">
             <div class="center-heading">
-              <h2 class="section-title">Blog Entries</h2>
+              <h2 class="section-title">Training Platform</h2>
             </div>
           </div>
           <div class="offset-lg-3 col-lg-6">
             <div class="center-text">
               <p>
-                Integer molestie aliquam gravida. Nullam nec arcu finibus,
-                imperdiet nulla vitae, placerat nibh. Cras maximus venenatis
-                molestie.
+                Welcome to our treatment training platform, where you can embark on a transformative journey of self-discovery, personal growth, and emotional well-being. Our platform is designed to provide you with the necessary tools, resources, and support to navigate your unique challenges and empower you to lead a fulfilling life.
               </p>
             </div>
           </div>
@@ -676,12 +670,10 @@ https://templatemo.com/tm-535-softy-pinko
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Vivamus ac vehicula dui</a>
+                  <a href="#">Building Inner Strength for Life's Challenges</a>
                 </h3>
                 <div class="text">
-                  Cras aliquet ligula dui, vitae fermentum velit tincidunt id.
-                  Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam
-                  egestas augue.
+                  Develop emotional resilience and inner strength to navigate life's challenges. Learn stress management, emotional regulation, and positive mindset techniques in interactive sessions guided by experienced therapists. Enhance your ability to bounce back and thrive.
                 </div>
                 <a href="#" class="main-button">Read More</a>
               </div>
@@ -694,12 +686,10 @@ https://templatemo.com/tm-535-softy-pinko
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Phasellus convallis augue</a>
+                  <a href="#">Enhance Relationships and Connection</a>
                 </h3>
                 <div class="text">
-                  Aliquam commodo ornare nisl, et scelerisque nisl dignissim ac.
-                  Vestibulum finibus urna ut velit venenatis, vel ultrices
-                  sapien mattis.
+                  Learn effective communication skills for deeper connections and conflict resolution. Develop active listening, assertiveness, and problem-solving techniques through role-plays and guided discussions. Transform your relationships with valuable insights from skilled therapists..
                 </div>
                 <a href="#" class="main-button">Read More</a>
               </div>
@@ -712,12 +702,10 @@ https://templatemo.com/tm-535-softy-pinko
               </div>
               <div class="blog-content">
                 <h3>
-                  <a href="#">Nam gravida purus non</a>
+                  <a href="#">Cultivate Present-Moment Awareness</a>
                 </h3>
                 <div class="text">
-                  Maecenas eu erat vitae dui convallis consequat vel gravida
-                  nulla. Vestibulum finibus euismod odio, ut tempus enim varius
-                  eu.
+                  Discover mindfulness to reduce stress and improve focus. Practice mindfulness techniques like meditation and breathing exercises to develop calmness and clarity. Integrate mindfulness into daily life for stress management and emotional balance.
                 </div>
                 <a href="#" class="main-button">Read More</a>
               </div>
@@ -858,7 +846,7 @@ https://templatemo.com/tm-535-softy-pinko
         <div class="row">
           <div class="col-lg-12">
             <p class="copyright">
-              Copyright &copy; 2020 Softy Pinko Company - Design: TemplateMo
+              Copyright CodeRadar Team
             </p>
           </div>
         </div>
