--- a/onboarding.html
+++ b/onboarding.html
@@ -53,10 +53,7 @@
     />
     <link href="./assets/css/custom.css" rel="stylesheet" />
     <title>Mentally</title>
-    <!--
-SOFTY PINKO
-https://templatemo.com/tm-535-softy-pinko
--->
+    
 
     <!-- Additional CSS Files -->
     <link
@@ -67,7 +64,7 @@ https://templatemo.com/tm-535-softy-pinko
 
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css" />
 
-    <link rel="stylesheet" href="assets/css/templatemo-softy-pinko.css" />
+    <link rel="stylesheet" href="assets/css/template.css" />
     <script src="./assets/js/onboarding.js" defer></script>
   </head>
 
@@ -94,7 +91,7 @@ https://templatemo.com/tm-535-softy-pinko
                   src="assets/images/mentally-logo.png"
                   width="50"
                   height="50"
-                  alt="Softy Pinko"
+                  alt="Mentally Logo"
                 />
               </a>
               <!-- ***** Logo End ***** -->
@@ -105,7 +102,7 @@ https://templatemo.com/tm-535-softy-pinko
                 <li><a href="/#work-process">Onboarding Process</a></li>
                 <li><a href="/#testimonials">Testimonials</a></li>
                 <li><a href="/#pricing-plans">Pricing Tables</a></li>
-                <li><a href="/#blog">Blog Entries</a></li>
+                <li><a href="/#blog">Training platform</a></li>
                 <li><a href="/#contact-us">Contact Us</a></li>
               </ul>
               <a class="menu-trigger">
@@ -514,7 +511,7 @@ https://templatemo.com/tm-535-softy-pinko
         <div class="row">
           <div class="col-lg-12">
             <p class="copyright">
-              Copyright &copy; 2020 Softy Pinko Company - Design: TemplateMo
+              Copyright CodeRadar Team
             </p>
           </div>
         </div>
